# Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md  image.ppm  sample.ppm
images/: moving_spheres.ppm  spheres_on_checkered_ground.ppm
include/: AABB.h  BVH.h  Box.h  Camera.h  CameraParameters.h  Color.h  ConstantMedium.h  Constants.h  HitTable.h  Hittable.h  HittableList.h  ImageData.h  Interval.h  MakeWorld.h  Material.h  Perlin.h  ProcessArguments.h  Quad.h  Random.h  Ray3D.h  RotateY.h  SceneInfo.h  Sphere.h  Texture.h  TimeFunction.h  Translate.h  Triple.h  Vector3D.h  processArguments.h  rtw_stb_image.h
rendered_images/: checkered_spheres.ppm  earth_render.ppm  simple_dual_lights.ppm  undulating_perlin_ball.ppm
rendered_images/ppms/: perlin_spheres.ppm  quadrilaterals.ppm  simple_quad_light.ppm
src/: main.cpp
